fix: correct hatchling src-layout packaging + add CI workflow
- Fix packages config: src → src/doc_drift_guard
- Add GitHub Actions CI for Python 3.10/3.11/3.12
- Closes packaging blocker that prevented pip install

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "pyright>=1.1"]
 ddg = "doc_drift_guard.cli:main"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+packages = ["src/doc_drift_guard"]
 
 [tool.ruff]
 line-length = 100
